some small changes

--- a/BlazorApp/Components/Pages/Home.razor
+++ b/BlazorApp/Components/Pages/Home.razor
@@ -110,8 +110,8 @@
         <div class="custom-select">
             <button class="select-button" role="combobox" aria-labelledby="select button" aria-haspopup="listbox"
                 aria-expanded="false" aria-controls="select-dropdown">
-                <span class="selected-value">CSS Day</span>
-                 <span>YYYY<span class="arrow"></span></span>
+                <span>CSS Day</span>
+                 <span class="selected-value">YYYY<span class="arrow"></span></span>
             </button>
             <ul class="select-dropdown" role="listbox" id="select-dropdown">
                 <li role="option">
