--- a/BlazorApp/wwwroot/app.css
+++ b/BlazorApp/wwwroot/app.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --light-color: #f5f5f5;
     --dark-color: #050505;
     --primary-color: orange;
@@ -80,12 +80,12 @@ select {
 
 .custom-select {
     position: relative;
-    width: 400px;
+    /*     width: 400px; */
     max-width: 100%;
     font-size: 1.15rem;
     color: #000;
     height: fit-content;
-    }
+}
 
 .select-button {
     width: 100%;
@@ -98,6 +98,7 @@ select {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 2rem;
 }
 
 .selected-value {
@@ -146,6 +147,7 @@ select {
             padding: 8px 10px;
             cursor: pointer;
             display: flex;
+            justify-content: flex-end;
             gap: 1rem;
             align-items: center;
         }
@@ -163,6 +165,11 @@ select {
         background: #ccc;
         border-radius: 25px;
     }
+
+        .select-dropdown::-webkit-scrollbar-thumb:hover {
+            background: #A8A8A8;
+            border-radius: 25px;
+        }
 
     .select-dropdown li:hover,
     .select-dropdown input:checked ~ label {
@@ -191,7 +198,7 @@ select {
     transform: scaleY(1);
 }
 
-nav .stats-dialog{
+nav .stats-dialog {
     height: 100%;
     aspect-ratio: 1;
     display: flex;
