--- a/BlazorApp/wwwroot/app.css
+++ b/BlazorApp/wwwroot/app.css
@@ -23,7 +23,7 @@ p{
 
 body {
     display: grid;
-    grid-template-columns: [page-start] auto [spacing-start] 4rem [content-start] 1fr [content-end] 4rem [spacing-end] auto [page-end];
+    grid-template-columns: [page-start] auto [spacing-start] 1rem [content-start] 1fr [content-end] 1rem [spacing-end] auto [page-end];
     min-height: 100vh;
     min-height: 100svh;
     position: relative;
@@ -304,7 +304,7 @@ article {
     height: 100%;
     grid-column: content;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 1rem;
     height: fit-content;
 }
@@ -370,13 +370,25 @@ article {
         border-radius: 5px;
     }
 
+@media only screen and (min-width: 650px) {
+    body {
+        grid-template-columns: [page-start] auto [spacing-start] 2rem [content-start] 1fr [content-end] 2rem [spacing-end] auto [page-end];
+    }
+
+    article {
+        grid-template-columns: 1fr 1fr;
+
+    }
+}
+
 @media only screen and (min-width: 1264px) {
     body {
-        display: grid;
         grid-template-columns: [page-start] auto [spacing-start] 4rem [content-start] 1200px [content-end] 4rem [spacing-end] auto [page-end];
-        min-height: 100vh;
-        min-height: 100svh;
-        position: relative;
+    }
+
+    article {
+        grid-template-columns: 1fr 1fr 1fr;
+
     }
 }
 
