--- a/BlazorApp/wwwroot/app.css
+++ b/BlazorApp/wwwroot/app.css
@@ -319,6 +319,7 @@ article {
         color: black;
         box-shadow: 4px 0px 10px rgba(0, 0, 0, .25), 0px 0px 0px 1px rgba(0, 0, 0, .5);
         transition: all .3s ease-in-out;
+        overflow: hidden;
     }
 
     article a:is(:hover, :focus) {
