--- a/BlazorApp/wwwroot/app.css
+++ b/BlazorApp/wwwroot/app.css
@@ -44,7 +44,7 @@ p {
 
 body {
     display: grid;
-    grid-template-columns: [page-start] auto [spacing-start] 2rem [content-start] 1fr [content-end] 2rem [spacing-end] auto [page-end];
+    grid-template-columns: [page-start] auto [spacing-start] 1.5rem [content-start] 1fr [content-end] 1.5rem [spacing-end] auto [page-end];
     min-height: 100vh;
     min-height: 100svh;
     position: relative;
@@ -396,14 +396,16 @@ section {
         }
 
     .master-of-ceremonies .avatar {
-        height: 5rem;
+        height: 4rem;
+        border-radius: 5px;
     }
 
     .master-of-ceremonies p {
         display: flex;
         justify-content: space-between;
-        gap: 1rem;
+        column-gap: 1rem;
         align-items: center;
+        flex-wrap: wrap;
     }
 
 
